* Change Log
All notable changes to this project will be documented in this file. This change log follows the conventions of [keepachangelog.com](http://keepachangelog.com/).

** Unreleased

[Unreleased]: https://github.com/yqrashawn/GokuRakuJoudo/compare/v0.1.14...HEAD

** 1.14 - 2018-12-22
*** Added
- add :sim in <other options> :params, [[https://github.com/yqrashawn/GokuRakuJoudo/blob/b9b334a187379f9bc8182ad59e2cca2a1789e9c0/src/karabiner_configurator/rules.clj#L183][params spec]]

*** Fixed
- error when running with brew service caused by new version of joker (v0.10.2)

[0.1.14]: https://github.com/yqrashawn/GokuRakuJoudo/compare/v0.1.13...v0.1.14

** 1.13 - 2018-12-07
*** Added
- add command to open log file
- use [[https://github.com/candid82/joker][joker]] to check edn file syntax, (add joker as dependency via homebrew)

[0.1.13]: https://github.com/yqrashawn/GokuRakuJoudo/compare/v0.1.12...v0.1.13

** 1.12 - 2018-12-07
*** Added
- error message when goku can't find the "Goku" profile
- now we support ~{:held <to defination>}~ ~{:dealyed {:invoked <to defination>} {:dealyed <to defination>}}~ in simlayer keys (not simlayer defination) #15

[0.1.12]: https://github.com/yqrashawn/GokuRakuJoudo/compare/v0.1.11...v0.1.12

** 1.11 - 2018-10-17
*** Fixed
- error while parsing ~{:any :key_code}~ as <from> section in rule
- more friendly error message, simply removed the stacktrace of the AssertionError

[0.1.11]: https://github.com/yqrashawn/GokuRakuJoudo/compare/v0.1.10...v0.1.11

** 1.10 - 2018-10-14
*** Fixed
- documentation typo, make readme more clear
*** Added
- now user can override ~to_if_alone~ when defining ~:layers~

[0.1.10]: https://github.com/yqrashawn/GokuRakuJoudo/compare/v0.1.9...v0.1.10

** 0.1.9 - 2018-10-02
*** Fixed
- different input source definition
now predefined input sources is ~:input-sources~ instead of ~:input_sources~
- fix homebrew service log file premission